plugins {
    id('java')
    id("maven-publish")
}

group 'disorg.soliloquy'
version '0.0.0'
description 'Soliloquy Ruleset Module'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(24)
    }
}

repositories {
    mavenLocal()
    mavenCentral()
    maven {
        url = uri("https://maven.pkg.github.com/felix-t-morgenstern/soliloquy.specs")
        credentials {
            username = 'felix-t-morgenstern'
            password = 'PASSWORD'
        }
    }
}

//noinspection DependencyNotationArgument
dependencies {
    implementation 'com.google.inject:guice:5.1.0'
    implementation "disorg.soliloquy:soliloquy.specs:0.0.539"
    implementation "disorg.soliloquy:inaugural.soliloquy.tools:0.0.149"
    implementation "disorg.soliloquy:inaugural.soliloquy.common:0.0.20"
    // https://mvnrepository.com/artifact/org.javatuples/javatuples
    implementation("org.javatuples:javatuples:1.2")

    // https://mvnrepository.com/artifact/org.mockito/mockito-core
    testImplementation("org.mockito:mockito-core:5.17.0")
    // https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-engine
    testImplementation("org.junit.jupiter:junit-jupiter-engine:5.12.2")
    // https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api
    testImplementation("org.junit.jupiter:junit-jupiter-api:5.12.2")
    // https://mvnrepository.com/artifact/org.junit.platform/junit-platform-launcher
    testImplementation("org.junit.platform:junit-platform-launcher:1.12.2")
    // https://central.sonatype.com/artifact/org.mockito/mockito-junit-jupiter
    testImplementation("org.mockito:mockito-junit-jupiter:5.17.0")
}

test {
    useJUnitPlatform()
}

publishing {
    repositories {
        maven {
            name = "inaugural.soliloquy.ruleset"
            url = uri("https://maven.pkg.github.com/felix-t-morgenstern/inaugural.soliloquy.ruleset")
            credentials {
                username = project.findProperty("gpr.user") ?: System.getenv("SOLILOQUY_GITHUB_PUBLISH_USERNAME")
                password = project.findProperty("gpr.user") ?: System.getenv("SOLILOQUY_GITHUB_PUBLISH_TOKEN")
            }
        }
    }
    publications {
        gpr(MavenPublication) {
            from(components.java)
        }
    }
}